[build-system]
requires = ["setuptools>=68", "cython>=0.28.4,<4", "toml"]

[project]
name = "thriftpy2"
version = "0.5.3"
description = "Pure python implementation of Apache Thrift."
authors = [
    {name = "ThriftPy Organization", email = "gotzehsing@gmail.com"},
]
dependencies = [
    "ply>=3.4,<4.0",
    "six~=1.15",
]
requires-python = ">=3.7"
readme = "README.rst"
license = {file = "LICENSE"}
keywords = ["thrift python thriftpy thriftpy2"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development",
]

[project.urls]
Homepage = "https://thriftpy2.readthedocs.io/"
Source = "https://github.com/Thriftpy/thriftpy2"

[project.optional-dependencies]
dev = [
    "flake8>=4.0",
    "sphinx-rtd-theme>=0.1.9",
    "sphinx>=1.3",
    "pytest-reraise",
    "pytest>=6.1.1,<8.2.0",
    "tornado>=4.0,<7.0; python_version>='3.12'",
    "tornado>=4.0,<6.0; python_version<'3.12'",
]

tornado = [
    "tornado>=4.0,<7.0; python_version>='3.12'",
    "tornado>=4.0,<6.0; python_version<'3.12'",
]
